fixes and model choice refactoring

--- a/notebooks/model-invetigations/analyze-parsed-data.ipynb
+++ b/notebooks/model-invetigations/analyze-parsed-data.ipynb
@@ -260,6 +260,353 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f258268d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, balanced_accuracy_score, f1_score, \n",
+    "    roc_auc_score, precision_score, recall_score,\n",
+    "    classification_report, confusion_matrix\n",
+    ")\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "def analyze_and_train_best_model(\n",
+    "    df, \n",
+    "    target_col='condition',\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    exclude_cols=None,\n",
+    "    metric='balanced_accuracy',\n",
+    "    verbose=True\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Analyze dataset, split into train/test, train multiple ML models, and select the best one.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    df : pandas.DataFrame\n",
+    "        Input dataframe with features and target column\n",
+    "    target_col : str, default='condition'\n",
+    "        Name of the target column\n",
+    "    test_size : float, default=0.2\n",
+    "        Proportion of dataset to use for testing\n",
+    "    random_state : int, default=42\n",
+    "        Random seed for reproducibility\n",
+    "    exclude_cols : list, default=None\n",
+    "        List of column names to exclude from features (e.g., ['source_file', 'Time'])\n",
+    "    metric : str, default='balanced_accuracy'\n",
+    "        Metric to use for selecting best model ('balanced_accuracy', 'f1', 'roc_auc', 'accuracy')\n",
+    "    verbose : bool, default=True\n",
+    "        Whether to print detailed results\n",
+    "        \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    dict : Dictionary containing:\n",
+    "        - 'best_model': The best trained model\n",
+    "        - 'best_model_name': Name of the best model\n",
+    "        - 'scaler': Fitted StandardScaler\n",
+    "        - 'label_encoder': Fitted LabelEncoder\n",
+    "        - 'feature_cols': List of feature column names used\n",
+    "        - 'results': Dictionary with all model results\n",
+    "        - 'X_test': Test features\n",
+    "        - 'y_test': Test labels\n",
+    "        - 'X_train': Train features\n",
+    "        - 'y_train': Train labels\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # 1. Data analysis\n",
+    "    if verbose:\n",
+    "        print(\"=\" * 60)\n",
+    "        print(\"DATASET ANALYSIS\")\n",
+    "        print(\"=\" * 60)\n",
+    "        print(f\"Dataset shape: {df.shape[0]} rows, {df.shape[1]} columns\")\n",
+    "        print(f\"\\nTarget variable '{target_col}' distribution:\")\n",
+    "        print(df[target_col].value_counts())\n",
+    "        print(f\"\\nTarget variable '{target_col}' distribution (%):\")\n",
+    "        print(df[target_col].value_counts(normalize=True) * 100)\n",
+    "        print(f\"\\nMissing values:\")\n",
+    "        print(df.isnull().sum()[df.isnull().sum() > 0])\n",
+    "        if df.isnull().sum().sum() == 0:\n",
+    "            print(\"No missing values found.\")\n",
+    "    \n",
+    "    # 2. Feature selection\n",
+    "    if exclude_cols is None:\n",
+    "        exclude_cols = ['source_file', 'Time']  # Default exclusions\n",
+    "    \n",
+    "    # Get numeric columns (excluding target and excluded columns)\n",
+    "    numeric_cols = df.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "    feature_cols = [c for c in numeric_cols if c not in [target_col] + exclude_cols]\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print(f\"\\nSelected {len(feature_cols)} features: {feature_cols[:5]}...\" if len(feature_cols) > 5 else f\"\\nSelected {len(feature_cols)} features: {feature_cols}\")\n",
+    "    \n",
+    "    # 3. Prepare features and target\n",
+    "    X = df[feature_cols].values\n",
+    "    y_raw = df[target_col].values\n",
+    "    \n",
+    "    # Encode target labels\n",
+    "    label_encoder = LabelEncoder()\n",
+    "    y = label_encoder.fit_transform(y_raw)\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print(f\"\\nLabel encoding: {dict(zip(label_encoder.classes_, label_encoder.transform(label_encoder.classes_)))}\")\n",
+    "    \n",
+    "    # 4. Train/test split (stratified to maintain class distribution)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, \n",
+    "        test_size=test_size, \n",
+    "        stratify=y, \n",
+    "        random_state=random_state\n",
+    "    )\n",
+    "    \n",
+    "    if verbose:\n",
+    "        print(f\"\\nTrain set: {X_train.shape[0]} samples\")\n",
+    "        print(f\"Test set: {X_test.shape[0]} samples\")\n",
+    "        print(f\"Train class distribution: {np.bincount(y_train)}\")\n",
+    "        print(f\"Test class distribution: {np.bincount(y_test)}\")\n",
+    "    \n",
+    "    # 5. Feature scaling\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
+    "    \n",
+    "    # 6. Define models to test\n",
+    "    models = {\n",
+    "        \"Logistic Regression\": LogisticRegression(\n",
+    "            max_iter=1000, \n",
+    "            random_state=random_state,\n",
+    "            n_jobs=-1\n",
+    "        ),\n",
+    "        \"Random Forest\": RandomForestClassifier(\n",
+    "            n_estimators=200, \n",
+    "            random_state=random_state, \n",
+    "            n_jobs=-1,\n",
+    "            max_depth=20\n",
+    "        ),\n",
+    "        \"Gradient Boosting\": GradientBoostingClassifier(\n",
+    "            n_estimators=100,\n",
+    "            random_state=random_state,\n",
+    "            max_depth=5\n",
+    "        ),\n",
+    "        \"AdaBoost\": AdaBoostClassifier(\n",
+    "            n_estimators=100,\n",
+    "            random_state=random_state\n",
+    "        ),\n",
+    "        \"SVM (RBF)\": SVC(\n",
+    "            probability=True, \n",
+    "            random_state=random_state,\n",
+    "            kernel='rbf'\n",
+    "        ),\n",
+    "        \"K-Nearest Neighbors\": KNeighborsClassifier(\n",
+    "            n_neighbors=5,\n",
+    "            n_jobs=-1\n",
+    "        ),\n",
+    "        \"Decision Tree\": DecisionTreeClassifier(\n",
+    "            random_state=random_state,\n",
+    "            max_depth=15\n",
+    "        )\n",
+    "    }\n",
+    "    \n",
+    "    # 7. Train and evaluate all models\n",
+    "    if verbose:\n",
+    "        print(\"\\n\" + \"=\" * 60)\n",
+    "        print(\"TRAINING MODELS\")\n",
+    "        print(\"=\" * 60)\n",
+    "    \n",
+    "    results = {}\n",
+    "    \n",
+    "    for name, model in models.items():\n",
+    "        if verbose:\n",
+    "            print(f\"\\nTraining {name}...\")\n",
+    "        \n",
+    "        try:\n",
+    "            # Train model\n",
+    "            model.fit(X_train_scaled, y_train)\n",
+    "            \n",
+    "            # Predictions\n",
+    "            y_pred = model.predict(X_test_scaled)\n",
+    "            y_proba = None\n",
+    "            if hasattr(model, \"predict_proba\"):\n",
+    "                y_proba = model.predict_proba(X_test_scaled)[:, 1]\n",
+    "            \n",
+    "            # Calculate metrics\n",
+    "            acc = accuracy_score(y_test, y_pred)\n",
+    "            bal_acc = balanced_accuracy_score(y_test, y_pred)\n",
+    "            f1 = f1_score(y_test, y_pred, average='weighted')\n",
+    "            prec = precision_score(y_test, y_pred, average='weighted', zero_division=0)\n",
+    "            rec = recall_score(y_test, y_pred, average='weighted', zero_division=0)\n",
+    "            \n",
+    "            roc_auc = None\n",
+    "            if y_proba is not None:\n",
+    "                try:\n",
+    "                    roc_auc = roc_auc_score(y_test, y_proba)\n",
+    "                except:\n",
+    "                    roc_auc = None\n",
+    "            \n",
+    "            results[name] = {\n",
+    "                'model': model,\n",
+    "                'accuracy': acc,\n",
+    "                'balanced_accuracy': bal_acc,\n",
+    "                'f1_score': f1,\n",
+    "                'precision': prec,\n",
+    "                'recall': rec,\n",
+    "                'roc_auc': roc_auc,\n",
+    "                'predictions': y_pred,\n",
+    "                'probabilities': y_proba\n",
+    "            }\n",
+    "            \n",
+    "            if verbose:\n",
+    "                print(f\"  Accuracy: {acc:.4f}\")\n",
+    "                print(f\"  Balanced Accuracy: {bal_acc:.4f}\")\n",
+    "                print(f\"  F1 Score: {f1:.4f}\")\n",
+    "                if roc_auc is not None:\n",
+    "                    print(f\"  ROC-AUC: {roc_auc:.4f}\")\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            if verbose:\n",
+    "                print(f\"  Error training {name}: {str(e)}\")\n",
+    "            results[name] = {'error': str(e)}\n",
+    "    \n",
+    "    # 8. Select best model based on specified metric\n",
+    "    valid_results = {k: v for k, v in results.items() if 'error' not in v}\n",
+    "    \n",
+    "    if metric not in ['balanced_accuracy', 'f1_score', 'roc_auc', 'accuracy']:\n",
+    "        metric = 'balanced_accuracy'\n",
+    "        if verbose:\n",
+    "            print(f\"\\nWarning: Invalid metric '{metric}'. Using 'balanced_accuracy' instead.\")\n",
+    "    \n",
+    "    # Handle ROC-AUC which might be None\n",
+    "    if metric == 'roc_auc':\n",
+    "        valid_results = {k: v for k, v in valid_results.items() if v.get('roc_auc') is not None}\n",
+    "        if not valid_results:\n",
+    "            metric = 'balanced_accuracy'\n",
+    "            if verbose:\n",
+    "                print(\"Warning: No models with ROC-AUC available. Using 'balanced_accuracy' instead.\")\n",
+    "    \n",
+    "    best_model_name = max(valid_results.keys(), key=lambda k: valid_results[k][metric])\n",
+    "    best_model_info = valid_results[best_model_name]\n",
+    "    \n",
+    "    # 9. Print results summary\n",
+    "    if verbose:\n",
+    "        print(\"\\n\" + \"=\" * 60)\n",
+    "        print(\"MODEL COMPARISON RESULTS\")\n",
+    "        print(\"=\" * 60)\n",
+    "        print(f\"\\n{'Model':<25} {'Accuracy':<10} {'Bal Acc':<10} {'F1':<10} {'ROC-AUC':<10}\")\n",
+    "        print(\"-\" * 65)\n",
+    "        \n",
+    "        sorted_results = sorted(\n",
+    "            valid_results.items(), \n",
+    "            key=lambda kv: kv[1][metric], \n",
+    "            reverse=True\n",
+    "        )\n",
+    "        \n",
+    "        for name, res in sorted_results:\n",
+    "            roc_str = f\"{res['roc_auc']:.4f}\" if res['roc_auc'] is not None else \"N/A\"\n",
+    "            print(f\"{name:<25} {res['accuracy']:<10.4f} {res['balanced_accuracy']:<10.4f} \"\n",
+    "                  f\"{res['f1_score']:<10.4f} {roc_str:<10}\")\n",
+    "        \n",
+    "        print(\"\\n\" + \"=\" * 60)\n",
+    "        print(f\"BEST MODEL: {best_model_name} (based on {metric})\")\n",
+    "        print(\"=\" * 60)\n",
+    "        print(f\"  Accuracy: {best_model_info['accuracy']:.4f}\")\n",
+    "        print(f\"  Balanced Accuracy: {best_model_info['balanced_accuracy']:.4f}\")\n",
+    "        print(f\"  F1 Score: {best_model_info['f1_score']:.4f}\")\n",
+    "        if best_model_info['roc_auc'] is not None:\n",
+    "            print(f\"  ROC-AUC: {best_model_info['roc_auc']:.4f}\")\n",
+    "        \n",
+    "        # Classification report for best model\n",
+    "        print(f\"\\nClassification Report for {best_model_name}:\")\n",
+    "        print(classification_report(y_test, best_model_info['predictions'], \n",
+    "                                   target_names=label_encoder.classes_))\n",
+    "        \n",
+    "        # Confusion matrix\n",
+    "        print(f\"\\nConfusion Matrix for {best_model_name}:\")\n",
+    "        cm = confusion_matrix(y_test, best_model_info['predictions'])\n",
+    "        print(cm)\n",
+    "    \n",
+    "    # 10. Retrain best model on full training data (optional, but good practice)\n",
+    "    best_model = best_model_info['model']\n",
+    "    # Create a fresh instance to retrain\n",
+    "    best_model_class = type(best_model)\n",
+    "    if best_model_name == \"Logistic Regression\":\n",
+    "        final_model = LogisticRegression(max_iter=1000, random_state=random_state, n_jobs=-1)\n",
+    "    elif best_model_name == \"Random Forest\":\n",
+    "        final_model = RandomForestClassifier(n_estimators=200, random_state=random_state, n_jobs=-1, max_depth=20)\n",
+    "    elif best_model_name == \"Gradient Boosting\":\n",
+    "        final_model = GradientBoostingClassifier(n_estimators=100, random_state=random_state, max_depth=5)\n",
+    "    elif best_model_name == \"AdaBoost\":\n",
+    "        final_model = AdaBoostClassifier(n_estimators=100, random_state=random_state)\n",
+    "    elif best_model_name == \"SVM (RBF)\":\n",
+    "        final_model = SVC(probability=True, random_state=random_state, kernel='rbf')\n",
+    "    elif best_model_name == \"K-Nearest Neighbors\":\n",
+    "        final_model = KNeighborsClassifier(n_neighbors=5, n_jobs=-1)\n",
+    "    elif best_model_name == \"Decision Tree\":\n",
+    "        final_model = DecisionTreeClassifier(random_state=random_state, max_depth=15)\n",
+    "    else:\n",
+    "        final_model = best_model\n",
+    "    \n",
+    "    final_model.fit(X_train_scaled, y_train)\n",
+    "    \n",
+    "    return {\n",
+    "        'best_model': final_model,\n",
+    "        'best_model_name': best_model_name,\n",
+    "        'scaler': scaler,\n",
+    "        'label_encoder': label_encoder,\n",
+    "        'feature_cols': feature_cols,\n",
+    "        'results': results,\n",
+    "        'X_test': X_test,\n",
+    "        'y_test': y_test,\n",
+    "        'X_train': X_train,\n",
+    "        'y_train': y_train,\n",
+    "        'X_test_scaled': X_test_scaled,\n",
+    "        'X_train_scaled': X_train_scaled\n",
+    "    }\n",
+    "\n",
+    "# Example usage:\n",
+    "# results = analyze_and_train_best_model(df, target_col='condition', test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3872ef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the function to analyze the dataset and train the best model\n",
+    "model_results = analyze_and_train_best_model(\n",
+    "    df, \n",
+    "    target_col='condition',\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    exclude_cols=['source_file', 'Time'],  # Exclude non-feature columns\n",
+    "    metric='balanced_accuracy',  # Metric to use for selecting best model\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "# Access the results\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"FUNCTION OUTPUT SUMMARY\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"Best Model: {model_results['best_model_name']}\")\n",
+    "print(f\"Number of features used: {len(model_results['feature_cols'])}\")\n",
+    "print(f\"Feature columns: {model_results['feature_cols']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "668a6e19",
    "metadata": {},
    "outputs": [],
