latest changes with ml models results

--- a/notebooks/model-invetigations/analyze-parsed-data.ipynb
+++ b/notebooks/model-invetigations/analyze-parsed-data.ipynb
@@ -250,7 +250,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load dataset (expects vibrations_data.csv in the notebook working directory)\n",
-    "df = pd.read_csv(\"../data/vibrations_data.csv\")\n",
+    "df = pd.read_csv(\"../../data/vibrations_data.csv\")\n",
     "\n",
     "print(f\"Loaded dataframe with {df.shape[0]} rows and {df.shape[1]} columns\")\n",
     "print(df.dtypes)\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f258268d",
    "metadata": {},
    "outputs": [],
@@ -579,10 +579,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c3872ef7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "DATASET ANALYSIS\n",
+      "============================================================\n",
+      "Dataset shape: 390263 rows, 25 columns\n",
+      "\n",
+      "Target variable 'condition' distribution:\n",
+      "condition\n",
+      "faulty     209662\n",
+      "healthy    180601\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Target variable 'condition' distribution (%):\n",
+      "condition\n",
+      "faulty     53.723258\n",
+      "healthy    46.276742\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Missing values:\n",
+      "Series([], dtype: int64)\n",
+      "No missing values found.\n",
+      "\n",
+      "Selected 22 features: ['Demand 1', 'Control 1', 'Output Drive 1', 'Channel 1', 'Channel 2']...\n",
+      "\n",
+      "Label encoding: {'faulty': 0, 'healthy': 1}\n",
+      "\n",
+      "Train set: 312210 samples\n",
+      "Test set: 78053 samples\n",
+      "Train class distribution: [167729 144481]\n",
+      "Test class distribution: [41933 36120]\n",
+      "\n",
+      "============================================================\n",
+      "TRAINING MODELS\n",
+      "============================================================\n",
+      "\n",
+      "Training Logistic Regression...\n",
+      "  Accuracy: 0.8942\n",
+      "  Balanced Accuracy: 0.8933\n",
+      "  F1 Score: 0.8942\n",
+      "  ROC-AUC: 0.9432\n",
+      "\n",
+      "Training Random Forest...\n",
+      "  Accuracy: 1.0000\n",
+      "  Balanced Accuracy: 1.0000\n",
+      "  F1 Score: 1.0000\n",
+      "  ROC-AUC: 1.0000\n",
+      "\n",
+      "Training Gradient Boosting...\n",
+      "  Accuracy: 0.9952\n",
+      "  Balanced Accuracy: 0.9950\n",
+      "  F1 Score: 0.9952\n",
+      "  ROC-AUC: 0.9999\n",
+      "\n",
+      "Training AdaBoost...\n",
+      "  Accuracy: 0.9378\n",
+      "  Balanced Accuracy: 0.9372\n",
+      "  F1 Score: 0.9378\n",
+      "  ROC-AUC: 0.9874\n",
+      "\n",
+      "Training SVM (RBF)...\n",
+      "  Accuracy: 0.9909\n",
+      "  Balanced Accuracy: 0.9905\n",
+      "  F1 Score: 0.9909\n",
+      "  ROC-AUC: 0.9978\n",
+      "\n",
+      "Training K-Nearest Neighbors...\n",
+      "  Accuracy: 0.9952\n",
+      "  Balanced Accuracy: 0.9951\n",
+      "  F1 Score: 0.9952\n",
+      "  ROC-AUC: 0.9990\n",
+      "\n",
+      "Training Decision Tree...\n",
+      "  Accuracy: 0.9986\n",
+      "  Balanced Accuracy: 0.9986\n",
+      "  F1 Score: 0.9986\n",
+      "  ROC-AUC: 0.9994\n",
+      "\n",
+      "============================================================\n",
+      "MODEL COMPARISON RESULTS\n",
+      "============================================================\n",
+      "\n",
+      "Model                     Accuracy   Bal Acc    F1         ROC-AUC   \n",
+      "-----------------------------------------------------------------\n",
+      "Random Forest             1.0000     1.0000     1.0000     1.0000    \n",
+      "Decision Tree             0.9986     0.9986     0.9986     0.9994    \n",
+      "K-Nearest Neighbors       0.9952     0.9951     0.9952     0.9990    \n",
+      "Gradient Boosting         0.9952     0.9950     0.9952     0.9999    \n",
+      "SVM (RBF)                 0.9909     0.9905     0.9909     0.9978    \n",
+      "AdaBoost                  0.9378     0.9372     0.9378     0.9874    \n",
+      "Logistic Regression       0.8942     0.8933     0.8942     0.9432    \n",
+      "\n",
+      "============================================================\n",
+      "BEST MODEL: Random Forest (based on balanced_accuracy)\n",
+      "============================================================\n",
+      "  Accuracy: 1.0000\n",
+      "  Balanced Accuracy: 1.0000\n",
+      "  F1 Score: 1.0000\n",
+      "  ROC-AUC: 1.0000\n",
+      "\n",
+      "Classification Report for Random Forest:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      faulty       1.00      1.00      1.00     41933\n",
+      "     healthy       1.00      1.00      1.00     36120\n",
+      "\n",
+      "    accuracy                           1.00     78053\n",
+      "   macro avg       1.00      1.00      1.00     78053\n",
+      "weighted avg       1.00      1.00      1.00     78053\n",
+      "\n",
+      "\n",
+      "Confusion Matrix for Random Forest:\n",
+      "[[41931     2]\n",
+      " [    0 36120]]\n",
+      "\n",
+      "============================================================\n",
+      "FUNCTION OUTPUT SUMMARY\n",
+      "============================================================\n",
+      "Best Model: Random Forest\n",
+      "Number of features used: 22\n",
+      "Feature columns: ['Demand 1', 'Control 1', 'Output Drive 1', 'Channel 1', 'Channel 2', 'Channel 3', 'Channel 4', 'Channel 1 Kurtosis', 'Channel 2 Kurtosis', 'Channel 3 Kurtosis', 'Channel 4 Kurtosis', 'Rear Input 1', 'Rear Input 2', 'Rear Input 3', 'Rear Input 4', 'Rear Input 5', 'Rear Input 6', 'Rear Input 7', 'Rear Input 8', 'rpm', 'humidity', 'temperature']\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the function to analyze the dataset and train the best model\n",
     "model_results = analyze_and_train_best_model(\n",
@@ -602,139 +728,6 @@
     "print(f\"Best Model: {model_results['best_model_name']}\")\n",
     "print(f\"Number of features used: {len(model_results['feature_cols'])}\")\n",
     "print(f\"Feature columns: {model_results['feature_cols']}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "668a6e19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.semi_supervised import LabelSpreading\n",
-    "from sklearn.metrics import accuracy_score, balanced_accuracy_score, f1_score, roc_auc_score\n",
-    "\n",
-    "# Split dataset into 70% \"labeled\" and 30% \"unlabeled\", train multiple models and pick the best.\n",
-    "\n",
-    "RANDOM_STATE = 42\n",
-    "\n",
-    "# 1) Create labeled / unlabeled splits (shuffled)\n",
-    "df_shuffled = df.sample(frac=1, random_state=RANDOM_STATE).reset_index(drop=True)\n",
-    "n_total = len(df_shuffled)\n",
-    "n_labeled = int(0.7 * n_total)\n",
-    "\n",
-    "df_labeled = df_shuffled.iloc[:n_labeled].copy()\n",
-    "df_unlabeled = df_shuffled.iloc[n_labeled:].copy()\n",
-    "\n",
-    "# Simulate unlabeled by removing the target\n",
-    "df_unlabeled_no_label = df_unlabeled.copy()\n",
-    "df_unlabeled_no_label['condition'] = np.nan\n",
-    "\n",
-    "print(f\"Total: {n_total}, Labeled: {len(df_labeled)}, Unlabeled: {len(df_unlabeled)}\")\n",
-    "\n",
-    "# 2) Feature / target selection\n",
-    "# use all numeric columns as features (drop identifiers / target)\n",
-    "numeric_cols = df.select_dtypes(include=[np.number]).columns.tolist()\n",
-    "# ensure target and any id-like columns are not included (source_file is object so not in numeric_cols)\n",
-    "feature_cols = [c for c in numeric_cols if c != 'rpm' or True]  # keep numeric metadata; adjust if desired\n",
-    "\n",
-    "X_labeled = df_labeled[feature_cols].values\n",
-    "y_labeled = LabelEncoder().fit_transform(df_labeled['condition'].values)  # faulty/healthy -> 0/1\n",
-    "\n",
-    "X_unlabeled = df_unlabeled_no_label[feature_cols].values\n",
-    "\n",
-    "# 3) Split labeled into train / test for evaluation (stratified)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X_labeled, y_labeled, test_size=0.2, stratify=y_labeled, random_state=RANDOM_STATE\n",
-    ")\n",
-    "\n",
-    "# 4) Standardize features (fit on train)\n",
-    "scaler = StandardScaler().fit(X_train)\n",
-    "X_train_s = scaler.transform(X_train)\n",
-    "X_test_s = scaler.transform(X_test)\n",
-    "X_unlabeled_s = scaler.transform(X_unlabeled)\n",
-    "\n",
-    "# 5) Define supervised models (pipelines with scaler where appropriate)\n",
-    "models = {\n",
-    "    \"LogisticRegression\": LogisticRegression(max_iter=1000, random_state=RANDOM_STATE),\n",
-    "    \"RandomForest\": RandomForestClassifier(n_estimators=200, random_state=RANDOM_STATE, n_jobs=-1),\n",
-    "    \"GradientBoosting\": GradientBoostingClassifier(random_state=RANDOM_STATE),\n",
-    "    \"SVC\": SVC(probability=True, random_state=RANDOM_STATE)\n",
-    "}\n",
-    "\n",
-    "results = {}\n",
-    "\n",
-    "for name, clf in models.items():\n",
-    "    # use scaled inputs for all to keep comparisons consistent\n",
-    "    clf.fit(X_train_s, y_train)\n",
-    "    y_pred = clf.predict(X_test_s)\n",
-    "    y_proba = clf.predict_proba(X_test_s)[:, 1] if hasattr(clf, \"predict_proba\") else None\n",
-    "\n",
-    "    acc = accuracy_score(y_test, y_pred)\n",
-    "    bal = balanced_accuracy_score(y_test, y_pred)\n",
-    "    f1 = f1_score(y_test, y_pred)\n",
-    "    try:\n",
-    "        roc = roc_auc_score(y_test, y_proba) if y_proba is not None else float(\"nan\")\n",
-    "    except Exception:\n",
-    "        roc = float(\"nan\")\n",
-    "\n",
-    "    results[name] = {\"model\": clf, \"accuracy\": acc, \"balanced_accuracy\": bal, \"f1\": f1, \"roc_auc\": roc}\n",
-    "\n",
-    "# 6) Semi-supervised LabelSpreading using train + unlabeled\n",
-    "# prepare combined dataset: labels -1 for unlabeled\n",
-    "X_ssl = np.vstack([X_train_s, X_unlabeled_s])\n",
-    "y_ssl = np.concatenate([y_train, -1 * np.ones(len(X_unlabeled_s), dtype=int)])\n",
-    "label_spread = LabelSpreading(kernel='rbf', alpha=0.2)\n",
-    "label_spread.fit(X_ssl, y_ssl)\n",
-    "y_pred_ssl = label_spread.predict(X_test_s)\n",
-    "# LabelSpreading doesn't provide predict_proba in same sense; use label_spread.predict_proba\n",
-    "y_proba_ssl = label_spread.predict_proba(X_test_s)[:, 1] if hasattr(label_spread, \"predict_proba\") else None\n",
-    "\n",
-    "acc = accuracy_score(y_test, y_pred_ssl)\n",
-    "bal = balanced_accuracy_score(y_test, y_pred_ssl)\n",
-    "f1 = f1_score(y_test, y_pred_ssl)\n",
-    "try:\n",
-    "    roc = roc_auc_score(y_test, y_proba_ssl) if y_proba_ssl is not None else float(\"nan\")\n",
-    "except Exception:\n",
-    "    roc = float(\"nan\")\n",
-    "\n",
-    "results[\"LabelSpreading(semi-supervised)\"] = {\n",
-    "    \"model\": label_spread, \"accuracy\": acc, \"balanced_accuracy\": bal, \"f1\": f1, \"roc_auc\": roc\n",
-    "}\n",
-    "\n",
-    "# 7) Report results and pick best by balanced_accuracy\n",
-    "print(\"\\nModel performance (sorted by balanced_accuracy):\")\n",
-    "sorted_results = sorted(results.items(), key=lambda kv: kv[1][\"balanced_accuracy\"], reverse=True)\n",
-    "for name, res in sorted_results:\n",
-    "    print(f\"{name}: bal_acc={res['balanced_accuracy']:.4f}, acc={res['accuracy']:.4f}, f1={res['f1']:.4f}, roc_auc={res['roc_auc']:.4f}\")\n",
-    "\n",
-    "best_name, best_info = sorted_results[0]\n",
-    "best_model = best_info[\"model\"]\n",
-    "print(f\"\\nBest model: {best_name}\")\n",
-    "\n",
-    "# 8) Retrain best model on all labeled data (use scaled full labeled features)\n",
-    "X_full_labeled = scaler.transform(X_labeled)  # scaler was fit on X_train; acceptable; optionally refit on full labeled\n",
-    "# If best model is a LabelSpreading semi-supervised model, retrain using all labeled + unlabeled\n",
-    "if best_name == \"LabelSpreading(semi-supervised)\":\n",
-    "    X_ssl_full = np.vstack([X_full_labeled, X_unlabeled_s])\n",
-    "    y_ssl_full = np.concatenate([y_labeled, -1 * np.ones(len(X_unlabeled_s), dtype=int)])\n",
-    "    final_model = LabelSpreading(kernel='rbf', alpha=0.2)\n",
-    "    final_model.fit(X_ssl_full, y_ssl_full)\n",
-    "else:\n",
-    "    # retrain supervised classifier on full labeled set\n",
-    "    # if model is pipeline-like or needs scaling, ensure inputs are scaled\n",
-    "    final_model = best_model\n",
-    "    final_model.fit(X_full_labeled, y_labeled)\n",
-    "\n",
-    "# final_model is ready for inference (use scaler.transform for feature preparation if supervised)\n",
-    "print(\"Final model ready as `final_model`. Use `scaler.transform(X)` on feature arrays before predict for supervised models.\")"
    ]
   }
  ],
